--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCP Secret Laboratory</title>
+    <title>Team Fortress 2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #707070;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #333;
+            background-color: #F2af50;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -24,7 +24,7 @@
         }
 
         nav {
-            background-color: #444;
+            background-color: #707070;
             padding: 10px;
             text-align: center;
         }
