--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #707070;
+            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #F2af50;
+            background-color: #2c3e50;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -24,7 +24,7 @@
         }
 
         nav {
-            background-color: #707070;
+            background-color: #34495e;
             padding: 10px;
             text-align: center;
         }
@@ -40,7 +40,7 @@
         }
 
         footer {
-            background-color: #333;
+            background-color: #2c3e50;
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -49,10 +49,11 @@
 </head>
 <body>
     <header>
-        <h1>SCP Secret Laboratory</h1>
+        <h1>Team Fortress 2</h1>
     </header>
     <nav>
         <a href="#about">Sobre o Jogo</a>
+        <a href="#characters">Personagens</a>
         <a href="#screenshots">Capturas de Tela</a>
         <a href="#download">Download</a>
         <a href="#contact">Contato</a>
@@ -60,9 +61,24 @@
     <section id="about">
         <h2>Sobre o Jogo</h2>
         <p>
-            SCP Secret Laboratory é um jogo multiplayer de sobrevivência em primeira pessoa baseado no universo da Fundação SCP.
-            Explore instalações secretas, enfrente criaturas anômalas e lute pela sobrevivência ou pelo controle da instalação.
+            Team Fortress 2 é um jogo de tiro em primeira pessoa (FPS) desenvolvido pela Valve. Ele é conhecido por seu estilo cartunesco,
+            variedade de personagens, modos de jogo e ação intensa em equipe. Junte-se a RED ou BLU e escolha entre nove classes de personagens únicos.
         </p>
+    </section>
+    <section id="characters">
+        <h2>Personagens</h2>
+        <p>Conheça alguns dos icônicos personagens de Team Fortress 2:</p>
+        <ul>
+            <li>Scout</li>
+            <li>Soldier</li>
+            <li>Pyro</li>
+            <li>Demoman</li>
+            <li>Heavy</li>
+            <li>Engineer</li>
+            <li>Medic</li>
+            <li>Sniper</li>
+            <li>Spy</li>
+        </ul>
     </section>
     <section id="screenshots">
         <h2>Capturas de Tela</h2>
@@ -71,4 +87,16 @@
         <img src="screenshot3.jpg" alt="Captura de Tela 3">
     </section>
     <section id="download">
-        <
+        <h2>Download</h2>
+        <p>Para baixar Team Fortress 2, visite o site oficial de download na Steam.</p>
+        <a href="https://store.steampowered.com/app/440/Team_Fortress_2/" target="_blank">Download Team Fortress 2</a>
+    </section>
+    <section id="contact">
+        <h2>Contato</h2>
+        <p>Para entrar em contato com a equipe de suporte, envie um e-mail para support@teamfortress2.com.</p>
+    </section>
+    <footer>
+        <p>&copy; 2023 Team Fortress 2. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
