--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #ff0000;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #2c3e50;
+            background-color: #0080ff;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -24,7 +24,7 @@
         }
 
         nav {
-            background-color: #34495e;
+            background-color: #818181;
             padding: 10px;
             text-align: center;
         }
@@ -40,7 +40,7 @@
         }
 
         footer {
-            background-color: #2c3e50;
+            background-color: #ffffff;
             color: #fff;
             padding: 10px;
             text-align: center;
