--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #ff0000;
+            background-color: #707070;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #0080ff;
+            background-color: #d49624;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -24,14 +24,14 @@
         }
 
         nav {
-            background-color: #818181;
+            background-color: #000000;
             padding: 10px;
             text-align: center;
         }
 
         nav a {
             color: #fff;
-            text-decoration: none;
+            text-decoration: #d49624;
             margin: 10px;
         }
 
