--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
     <section id="screenshots">
         <h2>Capturas de Tela</h2>
-        <img src="https://www.deviantart.com/a88huff/art/Team-Fortress-2-Logo-PSD-140396292" alt="Captura de Tela 1">
+        <img src="screenshot1.jpg" alt="Captura de Tela 1">
         <img src="screenshot2.jpg" alt="Captura de Tela 2">
         <img src="screenshot3.jpg" alt="Captura de Tela 3">
     </section>
