--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <p>Conheça alguns dos icônicos personagens de Team Fortress 2:</p>
         <ul>
             <li>Scout</li>
+            <p>O Scout</p>
             <li>Soldier</li>
             <li>Pyro</li>
             <li>Demoman</li>
