--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>Conheça alguns dos icônicos personagens de Team Fortress 2:</p>
         <ul>
             <li>Scout</li>
-            <p>O Scout</p>
+            <p>O Scout, também conhecido como Jeremy na lore do jogo, é uma das 3 classes de onfensa, o Scout tem como habilidade alta velocidade e pulo duplo </p>
             <li>Soldier</li>
             <li>Pyro</li>
             <li>Demoman</li>
